<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/nav_knowledge"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_knowledge" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>

